--- a/data/samples/stats.ipynb
+++ b/data/samples/stats.ipynb
@@ -2,49 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b75ca8ca",
+   "execution_count": 1,
+   "id": "58e810c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 49035114000 (center)\n",
+    "# 49035980000 (airport)\n",
+    "# 49035110106 (ski)\n",
+    "# 49035101402 (U of U)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "879c3751",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading month: Jan\n",
-      "Loading month: Feb\n",
-      "Loading month: Mar\n",
-      "Loading month: Apr\n",
-      "Loading month: May\n",
-      "Loading month: Jun\n",
-      "Loading month: Jul\n",
-      "Loading month: Aug\n",
-      "Loading month: Sep\n",
-      "Loading month: Oct\n",
-      "Loading month: Nov\n",
-      "Loading month: Dec\n",
-      "Total rows loaded: 28762190\n"
+     "ename": "ValueError",
+     "evalue": "'index_left' and 'index_right' cannot be names in the frames being joined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 117\u001b[39m\n\u001b[32m    104\u001b[39m gdf = gpd.sjoin(\n\u001b[32m    105\u001b[39m     gdf,\n\u001b[32m    106\u001b[39m     tracts.loc[tracts[\u001b[33m\"\u001b[39m\u001b[33mGEOID\u001b[39m\u001b[33m\"\u001b[39m] == ORIG_TRACT][[\u001b[33m\"\u001b[39m\u001b[33mgeometry\u001b[39m\u001b[33m\"\u001b[39m]],\n\u001b[32m    107\u001b[39m     predicate=\u001b[33m\"\u001b[39m\u001b[33mwithin\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    108\u001b[39m     how=\u001b[33m\"\u001b[39m\u001b[33minner\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    109\u001b[39m )\n\u001b[32m    111\u001b[39m gdf = gpd.GeoDataFrame(\n\u001b[32m    112\u001b[39m     gdf.drop(columns=\u001b[33m\"\u001b[39m\u001b[33mgeometry\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m    113\u001b[39m     geometry=gpd.points_from_xy(gdf.dest_lon, gdf.dest_lat),\n\u001b[32m    114\u001b[39m     crs=\u001b[33m\"\u001b[39m\u001b[33mEPSG:4326\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    115\u001b[39m )\n\u001b[32m--> \u001b[39m\u001b[32m117\u001b[39m gdf = \u001b[43mgpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43msjoin\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    118\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgdf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    119\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtracts\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtracts\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mGEOID\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[43mDEST_TRACT\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mgeometry\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    120\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpredicate\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mwithin\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    121\u001b[39m \u001b[43m    \u001b[49m\u001b[43mhow\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43minner\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\n\u001b[32m    122\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m    124\u001b[39m \u001b[38;5;66;03m# =========================\u001b[39;00m\n\u001b[32m    125\u001b[39m \u001b[38;5;66;03m# 4️⃣ COMPLETE TRIP FILTER (≥2 legs)\u001b[39;00m\n\u001b[32m    126\u001b[39m \u001b[38;5;66;03m# =========================\u001b[39;00m\n\u001b[32m    128\u001b[39m leg_counts = gdf.groupby(\u001b[33m\"\u001b[39m\u001b[33mlinked_trip_id\u001b[39m\u001b[33m\"\u001b[39m).size()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\rli04\\AppData\\Local\\anaconda3\\Lib\\site-packages\\geopandas\\tools\\sjoin.py:119\u001b[39m, in \u001b[36msjoin\u001b[39m\u001b[34m(left_df, right_df, how, predicate, lsuffix, rsuffix, **kwargs)\u001b[39m\n\u001b[32m    116\u001b[39m     first = \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28miter\u001b[39m(kwargs.keys()))\n\u001b[32m    117\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33msjoin() got an unexpected keyword argument \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfirst\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m119\u001b[39m \u001b[43m_basic_checks\u001b[49m\u001b[43m(\u001b[49m\u001b[43mleft_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mright_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhow\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlsuffix\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrsuffix\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    121\u001b[39m indices = _geom_predicate_query(left_df, right_df, predicate)\n\u001b[32m    123\u001b[39m joined = _frame_join(indices, left_df, right_df, how, lsuffix, rsuffix)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\rli04\\AppData\\Local\\anaconda3\\Lib\\site-packages\\geopandas\\tools\\sjoin.py:172\u001b[39m, in \u001b[36m_basic_checks\u001b[39m\u001b[34m(left_df, right_df, how, lsuffix, rsuffix)\u001b[39m\n\u001b[32m    168\u001b[39m \u001b[38;5;66;03m# due to GH 352\u001b[39;00m\n\u001b[32m    169\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(left_df.columns.isin([index_left, index_right])) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28many\u001b[39m(\n\u001b[32m    170\u001b[39m     right_df.columns.isin([index_left, index_right])\n\u001b[32m    171\u001b[39m ):\n\u001b[32m--> \u001b[39m\u001b[32m172\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    173\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m and \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m cannot be names in the frames being\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    174\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m joined\u001b[39m\u001b[33m\"\u001b[39m.format(index_left, index_right)\n\u001b[32m    175\u001b[39m     )\n",
+      "\u001b[31mValueError\u001b[39m: 'index_left' and 'index_right' cannot be names in the frames being joined"
      ]
     }
    ],
    "source": [
     "# ============================================================\n",
+    "# FAST VERSION\n",
     "# Build OD-level annual statistics for Complete Trips\n",
-    "# (population-level, NOT sampled)\n",
+    "# OD defined strictly by Census Tract (GEOID + shapefile)\n",
+    "# Population-level statistics (NOT sampled)\n",
     "# ============================================================\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import geopandas as gpd\n",
     "import glob\n",
     "import json\n",
     "from datetime import datetime\n",
-    "from collections import defaultdict\n",
+    "import pygeohash as pgh\n",
     "\n",
     "# =========================\n",
-    "# CONFIG (与 sample 脚本保持一致)\n",
+    "# CONFIG\n",
     "# =========================\n",
     "\n",
     "BASE_DIR = \"C:/Users/rli04/Villanova University/Complete-trip-coordinate - Documents/General\"\n",
     "PARQUET_DIR = f\"{BASE_DIR}/Salt_Lake/delivery\"\n",
+    "\n",
+    "TRACT_SHP = (\n",
+    "    f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/\"\n",
+    "    f\"2-OD patterns by census track/six_counties_track.shp\"\n",
+    ")\n",
     "\n",
     "ORIG_TRACT = \"49035114000\"\n",
     "DEST_TRACT = \"49035980000\"\n",
@@ -53,15 +68,11 @@
     "# 49035110106 (ski)\n",
     "# 49035101402 (U of U)\n",
     "MONTHS = [\n",
-    "    'Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
-    "    'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'\n",
+    "    \"Jan\",\"Feb\",\"Mar\",\"Apr\",\"May\",\"Jun\",\n",
+    "    \"Jul\",\"Aug\",\"Sep\",\"Oct\",\"Nov\",\"Dec\"\n",
     "]\n",
     "\n",
     "OUTPUT_STATS_JSON = f\"{ORIG_TRACT}_to_{DEST_TRACT}.stats.json\"\n",
-    "\n",
-    "# =========================\n",
-    "# REQUIRED COLUMNS\n",
-    "# =========================\n",
     "\n",
     "USE_COLS = [\n",
     "    \"linked_trip_id\",\n",
@@ -73,164 +84,146 @@
     "]\n",
     "\n",
     "# =========================\n",
+    "# 0️⃣ LOAD TRACTS\n",
+    "# =========================\n",
+    "\n",
+    "tracts = gpd.read_file(TRACT_SHP).to_crs(\"EPSG:4326\")\n",
+    "tracts[\"GEOID\"] = tracts[\"GEOID\"].astype(str)\n",
+    "\n",
+    "orig_geom = tracts.loc[tracts[\"GEOID\"] == ORIG_TRACT, \"geometry\"].iloc[0]\n",
+    "dest_geom = tracts.loc[tracts[\"GEOID\"] == DEST_TRACT, \"geometry\"].iloc[0]\n",
+    "\n",
+    "# =========================\n",
     "# 1️⃣ LOAD YEARLY DATA\n",
     "# =========================\n",
     "\n",
-    "MONTHLY_DFS = []\n",
+    "dfs = []\n",
     "\n",
     "for m in MONTHS:\n",
-    "    print(f\"Loading month: {m}\")\n",
     "    files = glob.glob(f\"{PARQUET_DIR}/Salt_Lake-{m}-2020/*.snappy.parquet\")\n",
     "    if not files:\n",
     "        continue\n",
+    "    dfs.append(pd.concat(\n",
+    "        [pd.read_parquet(f, columns=USE_COLS) for f in files],\n",
+    "        ignore_index=True\n",
+    "    ))\n",
     "\n",
-    "    dfs = [pd.read_parquet(f, columns=USE_COLS) for f in files]\n",
-    "    df_m = pd.concat(dfs, ignore_index=True)\n",
+    "df = pd.concat(dfs, ignore_index=True)\n",
     "\n",
-    "    df_m[\"local_datetime_start\"] = pd.to_datetime(\n",
-    "        df_m[\"local_datetime_start\"], errors=\"coerce\"\n",
-    "    )\n",
-    "    df_m[\"local_datetime_end\"] = pd.to_datetime(\n",
-    "        df_m[\"local_datetime_end\"], errors=\"coerce\"\n",
-    "    )\n",
+    "df[\"local_datetime_start\"] = pd.to_datetime(df[\"local_datetime_start\"], errors=\"coerce\")\n",
+    "df[\"local_datetime_end\"]   = pd.to_datetime(df[\"local_datetime_end\"], errors=\"coerce\")\n",
     "\n",
-    "    df_m = df_m[\n",
-    "        (df_m[\"local_datetime_end\"] > df_m[\"local_datetime_start\"])\n",
-    "    ]\n",
-    "\n",
-    "    MONTHLY_DFS.append(df_m)\n",
-    "\n",
-    "df = pd.concat(MONTHLY_DFS, ignore_index=True)\n",
-    "print(\"Total rows loaded:\", len(df))\n",
+    "df = df[df[\"local_datetime_end\"] > df[\"local_datetime_start\"]]\n",
     "\n",
     "# =========================\n",
-    "# 2️⃣ OD FILTER\n",
+    "# 2️⃣ VECTORIZE GEOHASH → POINT\n",
     "# =========================\n",
     "\n",
-    "df = df[\n",
-    "    (df[\"geohash7_orig\"].notna()) &\n",
-    "    (df[\"geohash7_dest\"].notna())\n",
-    "]\n",
+    "lat_o, lon_o = zip(*df[\"geohash7_orig\"].map(pgh.decode))\n",
+    "lat_d, lon_d = zip(*df[\"geohash7_dest\"].map(pgh.decode))\n",
     "\n",
-    "df = df[\n",
-    "    (df[\"geohash7_orig\"].str.startswith(ORIG_TRACT[:5])) &\n",
-    "    (df[\"geohash7_dest\"].str.startswith(DEST_TRACT[:5]))\n",
-    "]\n",
+    "df[\"orig_lon\"] = lon_o\n",
+    "df[\"orig_lat\"] = lat_o\n",
+    "df[\"dest_lon\"] = lon_d\n",
+    "df[\"dest_lat\"] = lat_d\n",
     "\n",
-    "print(\"After OD filter, rows:\", len(df))\n",
-    "\n",
-    "# =========================\n",
-    "# 3️⃣ COMPLETE TRIP FILTER\n",
-    "# =========================\n",
-    "\n",
-    "mode_sets = (\n",
-    "    df.groupby(\"linked_trip_id\")[\"travel_mode\"]\n",
-    "      .agg(lambda x: set(str(m).lower().strip() for m in x))\n",
+    "gdf = gpd.GeoDataFrame(\n",
+    "    df,\n",
+    "    geometry=gpd.points_from_xy(df.orig_lon, df.orig_lat),\n",
+    "    crs=\"EPSG:4326\"\n",
     ")\n",
     "\n",
-    "valid_linked_ids = mode_sets[\n",
-    "    (mode_sets.apply(len) >= 2) &\n",
-    "    (mode_sets != {\"car\"})\n",
-    "].index\n",
-    "\n",
-    "df = df[df[\"linked_trip_id\"].isin(valid_linked_ids)]\n",
-    "\n",
-    "print(\"Valid linked trips:\", df[\"linked_trip_id\"].nunique())\n",
-    "\n",
     "# =========================\n",
-    "# 4️⃣ COMPUTE LEG DURATION\n",
+    "# 3️⃣ OD FILTER (SPATIAL JOIN, FAST)\n",
     "# =========================\n",
     "\n",
-    "df[\"duration_min\"] = (\n",
-    "    df[\"local_datetime_end\"] - df[\"local_datetime_start\"]\n",
+    "gdf = gpd.sjoin(\n",
+    "    gdf,\n",
+    "    tracts.loc[tracts[\"GEOID\"] == ORIG_TRACT][[\"geometry\"]],\n",
+    "    predicate=\"within\",\n",
+    "    how=\"inner\"\n",
+    ")\n",
+    "\n",
+    "gdf = gpd.GeoDataFrame(\n",
+    "    gdf.drop(columns=\"geometry\"),\n",
+    "    geometry=gpd.points_from_xy(gdf.dest_lon, gdf.dest_lat),\n",
+    "    crs=\"EPSG:4326\"\n",
+    ")\n",
+    "\n",
+    "gdf = gpd.sjoin(\n",
+    "    gdf,\n",
+    "    tracts.loc[tracts[\"GEOID\"] == DEST_TRACT][[\"geometry\"]],\n",
+    "    predicate=\"within\",\n",
+    "    how=\"inner\"\n",
+    ")\n",
+    "\n",
+    "# =========================\n",
+    "# 4️⃣ COMPLETE TRIP FILTER (≥2 legs)\n",
+    "# =========================\n",
+    "\n",
+    "leg_counts = gdf.groupby(\"linked_trip_id\").size()\n",
+    "valid_ids = leg_counts[leg_counts >= 2].index\n",
+    "gdf = gdf[gdf[\"linked_trip_id\"].isin(valid_ids)]\n",
+    "\n",
+    "# =========================\n",
+    "# 5️⃣ LEG DURATION (VECTOR)\n",
+    "# =========================\n",
+    "\n",
+    "gdf[\"duration_min\"] = (\n",
+    "    gdf[\"local_datetime_end\"] - gdf[\"local_datetime_start\"]\n",
     ").dt.total_seconds() / 60\n",
     "\n",
     "# =========================\n",
-    "# 5️⃣ BUILD YEARLY linked_trip OBJECTS\n",
+    "# 6️⃣ COMPLETE-TRIP AGGREGATION (FAST)\n",
     "# =========================\n",
     "\n",
-    "linked_groups = defaultdict(list)\n",
-    "\n",
-    "for r in df.itertuples():\n",
-    "    linked_groups[r.linked_trip_id].append(r)\n",
-    "\n",
-    "linked_trips_year = []\n",
-    "\n",
-    "for linked_id, rows in linked_groups.items():\n",
-    "\n",
-    "    rows_sorted = sorted(rows, key=lambda r: r.local_datetime_start)\n",
-    "\n",
-    "    if len(rows_sorted) < 2:\n",
-    "        continue\n",
-    "\n",
-    "    total_duration = sum(\n",
-    "        r.duration_min or 0\n",
-    "        for r in rows_sorted\n",
+    "trip_stats = (\n",
+    "    gdf\n",
+    "    .groupby(\"linked_trip_id\")\n",
+    "    .agg(\n",
+    "        total_duration=(\"duration_min\", \"sum\"),\n",
+    "        transfers=(\"duration_min\", \"size\"),\n",
+    "        modes=(\"travel_mode\", lambda x: set(m.lower().strip() for m in x))\n",
     "    )\n",
+    ")\n",
     "\n",
-    "    transfer_count = len(rows_sorted) - 1\n",
-    "\n",
-    "    mode_set = set(\n",
-    "        str(r.travel_mode).lower().strip()\n",
-    "        for r in rows_sorted\n",
-    "    )\n",
-    "\n",
-    "    linked_trips_year.append({\n",
-    "        \"duration\": total_duration,\n",
-    "        \"transfers\": transfer_count,\n",
-    "        \"modes\": mode_set\n",
-    "    })\n",
-    "\n",
-    "print(\"Final linked trips (year):\", len(linked_trips_year))\n",
+    "trip_stats[\"transfers\"] -= 1\n",
     "\n",
     "# =========================\n",
-    "# 6️⃣ AGGREGATE STATISTICS\n",
+    "# 7️⃣ FINAL STATS\n",
     "# =========================\n",
     "\n",
-    "durations = np.array([t[\"duration\"] for t in linked_trips_year])\n",
-    "transfers = np.array([t[\"transfers\"] for t in linked_trips_year])\n",
-    "mode_sets = [t[\"modes\"] for t in linked_trips_year]\n",
+    "dur = trip_stats[\"total_duration\"].values\n",
+    "trf = trip_stats[\"transfers\"].values\n",
+    "modes = trip_stats[\"modes\"].values\n",
     "\n",
-    "def pct(arr, q):\n",
-    "    return float(np.percentile(arr, q))\n",
+    "def pct(a, q): return float(np.percentile(a, q))\n",
     "\n",
     "stats = {\n",
     "    \"schema\": \"nova.complete_trip.od_stats.v1\",\n",
     "    \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
-    "    \"od\": {\n",
-    "        \"origin\": ORIG_TRACT,\n",
-    "        \"destination\": DEST_TRACT\n",
-    "    },\n",
-    "    \"coverage\": {\n",
-    "        \"temporal\": \"year-2020\",\n",
-    "        \"spatial\": \"Salt Lake 6-county\"\n",
-    "    },\n",
-    "    \"counts\": {\n",
-    "        \"linked_trips\": int(len(durations))\n",
-    "    },\n",
+    "    \"od\": {\"origin\": ORIG_TRACT, \"destination\": DEST_TRACT},\n",
+    "    \"coverage\": {\"temporal\": \"year-2020\", \"spatial\": \"Salt Lake 6-county\"},\n",
+    "    \"counts\": {\"linked_trips\": int(len(dur))},\n",
     "    \"trip_duration_min\": {\n",
-    "        \"min\": float(durations.min()),\n",
-    "        \"p25\": pct(durations, 25),\n",
-    "        \"median\": pct(durations, 50),\n",
-    "        \"p75\": pct(durations, 75),\n",
-    "        \"max\": float(durations.max())\n",
+    "        \"min\": float(dur.min()),\n",
+    "        \"p25\": pct(dur, 25),\n",
+    "        \"median\": pct(dur, 50),\n",
+    "        \"p75\": pct(dur, 75),\n",
+    "        \"max\": float(dur.max())\n",
     "    },\n",
     "    \"transfers\": {\n",
-    "        \"avg\": float(transfers.mean()),\n",
-    "        \"p75\": int(pct(transfers, 75)),\n",
-    "        \"max\": int(transfers.max())\n",
+    "        \"avg\": float(trf.mean()),\n",
+    "        \"p75\": int(pct(trf, 75)),\n",
+    "        \"max\": int(trf.max())\n",
     "    },\n",
     "    \"mode_involvement\": {\n",
-    "        \"car\": float(sum(\"car\" in m for m in mode_sets) / len(mode_sets)),\n",
-    "        \"bus\": float(sum(\"bus\" in m for m in mode_sets) / len(mode_sets)),\n",
-    "        \"rail\": float(sum(\"rail\" in m for m in mode_sets) / len(mode_sets)),\n",
-    "        \"walk\": float(sum(\"walk\" in m for m in mode_sets) / len(mode_sets))\n",
+    "        \"car\": float(sum(\"car\" in m for m in modes) / len(modes)),\n",
+    "        \"bus\": float(sum(\"bus\" in m for m in modes) / len(modes)),\n",
+    "        \"rail\": float(sum(\"rail\" in m for m in modes) / len(modes)),\n",
+    "        \"walk\": float(sum(\"walk\" in m for m in modes) / len(modes))\n",
     "    }\n",
     "}\n",
-    "\n",
-    "# =========================\n",
-    "# 7️⃣ OUTPUT JSON\n",
-    "# =========================\n",
     "\n",
     "with open(OUTPUT_STATS_JSON, \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(stats, f, indent=2, allow_nan=False)\n",
