--- a/data/samples/stats.ipynb
+++ b/data/samples/stats.ipynb
@@ -15,27 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "879c3751",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "'index_left' and 'index_right' cannot be names in the frames being joined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 117\u001b[39m\n\u001b[32m    104\u001b[39m gdf = gpd.sjoin(\n\u001b[32m    105\u001b[39m     gdf,\n\u001b[32m    106\u001b[39m     tracts.loc[tracts[\u001b[33m\"\u001b[39m\u001b[33mGEOID\u001b[39m\u001b[33m\"\u001b[39m] == ORIG_TRACT][[\u001b[33m\"\u001b[39m\u001b[33mgeometry\u001b[39m\u001b[33m\"\u001b[39m]],\n\u001b[32m    107\u001b[39m     predicate=\u001b[33m\"\u001b[39m\u001b[33mwithin\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    108\u001b[39m     how=\u001b[33m\"\u001b[39m\u001b[33minner\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    109\u001b[39m )\n\u001b[32m    111\u001b[39m gdf = gpd.GeoDataFrame(\n\u001b[32m    112\u001b[39m     gdf.drop(columns=\u001b[33m\"\u001b[39m\u001b[33mgeometry\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m    113\u001b[39m     geometry=gpd.points_from_xy(gdf.dest_lon, gdf.dest_lat),\n\u001b[32m    114\u001b[39m     crs=\u001b[33m\"\u001b[39m\u001b[33mEPSG:4326\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    115\u001b[39m )\n\u001b[32m--> \u001b[39m\u001b[32m117\u001b[39m gdf = \u001b[43mgpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43msjoin\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    118\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgdf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    119\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtracts\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtracts\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mGEOID\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[43mDEST_TRACT\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mgeometry\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    120\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpredicate\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mwithin\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    121\u001b[39m \u001b[43m    \u001b[49m\u001b[43mhow\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43minner\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\n\u001b[32m    122\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m    124\u001b[39m \u001b[38;5;66;03m# =========================\u001b[39;00m\n\u001b[32m    125\u001b[39m \u001b[38;5;66;03m# 4️⃣ COMPLETE TRIP FILTER (≥2 legs)\u001b[39;00m\n\u001b[32m    126\u001b[39m \u001b[38;5;66;03m# =========================\u001b[39;00m\n\u001b[32m    128\u001b[39m leg_counts = gdf.groupby(\u001b[33m\"\u001b[39m\u001b[33mlinked_trip_id\u001b[39m\u001b[33m\"\u001b[39m).size()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\rli04\\AppData\\Local\\anaconda3\\Lib\\site-packages\\geopandas\\tools\\sjoin.py:119\u001b[39m, in \u001b[36msjoin\u001b[39m\u001b[34m(left_df, right_df, how, predicate, lsuffix, rsuffix, **kwargs)\u001b[39m\n\u001b[32m    116\u001b[39m     first = \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28miter\u001b[39m(kwargs.keys()))\n\u001b[32m    117\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33msjoin() got an unexpected keyword argument \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfirst\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m119\u001b[39m \u001b[43m_basic_checks\u001b[49m\u001b[43m(\u001b[49m\u001b[43mleft_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mright_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhow\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlsuffix\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrsuffix\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    121\u001b[39m indices = _geom_predicate_query(left_df, right_df, predicate)\n\u001b[32m    123\u001b[39m joined = _frame_join(indices, left_df, right_df, how, lsuffix, rsuffix)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\rli04\\AppData\\Local\\anaconda3\\Lib\\site-packages\\geopandas\\tools\\sjoin.py:172\u001b[39m, in \u001b[36m_basic_checks\u001b[39m\u001b[34m(left_df, right_df, how, lsuffix, rsuffix)\u001b[39m\n\u001b[32m    168\u001b[39m \u001b[38;5;66;03m# due to GH 352\u001b[39;00m\n\u001b[32m    169\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(left_df.columns.isin([index_left, index_right])) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28many\u001b[39m(\n\u001b[32m    170\u001b[39m     right_df.columns.isin([index_left, index_right])\n\u001b[32m    171\u001b[39m ):\n\u001b[32m--> \u001b[39m\u001b[32m172\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    173\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m and \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m cannot be names in the frames being\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    174\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m joined\u001b[39m\u001b[33m\"\u001b[39m.format(index_left, index_right)\n\u001b[32m    175\u001b[39m     )\n",
-      "\u001b[31mValueError\u001b[39m: 'index_left' and 'index_right' cannot be names in the frames being joined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After OD (tract-based) filter, rows: 3702\n",
+      "Unique linked trips: 3699\n",
+      "After complete-trip filter, linked trips: 3\n",
+      "Stats JSON written to: 49035114000_to_49035101402.stats.json\n"
      ]
     }
    ],
    "source": [
     "# ============================================================\n",
-    "# FAST VERSION\n",
+    "# FAST + ROBUST VERSION\n",
     "# Build OD-level annual statistics for Complete Trips\n",
     "# OD defined strictly by Census Tract (GEOID + shapefile)\n",
     "# Population-level statistics (NOT sampled)\n",
@@ -48,6 +45,7 @@
     "import json\n",
     "from datetime import datetime\n",
     "import pygeohash as pgh\n",
+    "\n",
     "\n",
     "# =========================\n",
     "# CONFIG\n",
@@ -62,7 +60,7 @@
     ")\n",
     "\n",
     "ORIG_TRACT = \"49035114000\"\n",
-    "DEST_TRACT = \"49035980000\"\n",
+    "DEST_TRACT = \"49035101402\"\n",
     "# 49035114000 (center)\n",
     "# 49035980000 (airport)\n",
     "# 49035110106 (ski)\n",
@@ -83,6 +81,7 @@
     "    \"geohash7_dest\"\n",
     "]\n",
     "\n",
+    "\n",
     "# =========================\n",
     "# 0️⃣ LOAD TRACTS\n",
     "# =========================\n",
@@ -90,15 +89,18 @@
     "tracts = gpd.read_file(TRACT_SHP).to_crs(\"EPSG:4326\")\n",
     "tracts[\"GEOID\"] = tracts[\"GEOID\"].astype(str)\n",
     "\n",
-    "orig_geom = tracts.loc[tracts[\"GEOID\"] == ORIG_TRACT, \"geometry\"].iloc[0]\n",
-    "dest_geom = tracts.loc[tracts[\"GEOID\"] == DEST_TRACT, \"geometry\"].iloc[0]\n",
+    "orig_poly = tracts.loc[tracts[\"GEOID\"] == ORIG_TRACT, [\"geometry\"]].copy()\n",
+    "dest_poly = tracts.loc[tracts[\"GEOID\"] == DEST_TRACT, [\"geometry\"]].copy()\n",
+    "\n",
+    "if orig_poly.empty or dest_poly.empty:\n",
+    "    raise ValueError(\"Origin/Destination tract GEOID not found in shapefile.\")\n",
+    "\n",
     "\n",
     "# =========================\n",
     "# 1️⃣ LOAD YEARLY DATA\n",
     "# =========================\n",
     "\n",
     "dfs = []\n",
-    "\n",
     "for m in MONTHS:\n",
     "    files = glob.glob(f\"{PARQUET_DIR}/Salt_Lake-{m}-2020/*.snappy.parquet\")\n",
     "    if not files:\n",
@@ -108,6 +110,9 @@
     "        ignore_index=True\n",
     "    ))\n",
     "\n",
+    "if not dfs:\n",
+    "    raise ValueError(\"No parquet files found. Check PARQUET_DIR and MONTHS.\")\n",
+    "\n",
     "df = pd.concat(dfs, ignore_index=True)\n",
     "\n",
     "df[\"local_datetime_start\"] = pd.to_datetime(df[\"local_datetime_start\"], errors=\"coerce\")\n",
@@ -115,55 +120,121 @@
     "\n",
     "df = df[df[\"local_datetime_end\"] > df[\"local_datetime_start\"]]\n",
     "\n",
+    "# 清理 geohash 空值/非字符串（避免 pgh.decode 崩）\n",
+    "df = df[df[\"geohash7_orig\"].notna() & df[\"geohash7_dest\"].notna()]\n",
+    "df[\"geohash7_orig\"] = df[\"geohash7_orig\"].astype(str)\n",
+    "df[\"geohash7_dest\"] = df[\"geohash7_dest\"].astype(str)\n",
+    "\n",
+    "\n",
     "# =========================\n",
-    "# 2️⃣ VECTORIZE GEOHASH → POINT\n",
+    "# 2️⃣ FAST GEOHASH DECODE (UNIQUE CACHE)\n",
     "# =========================\n",
     "\n",
-    "lat_o, lon_o = zip(*df[\"geohash7_orig\"].map(pgh.decode))\n",
-    "lat_d, lon_d = zip(*df[\"geohash7_dest\"].map(pgh.decode))\n",
+    "def _decode_unique_geohash(series: pd.Series) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Decode geohash series into (lat, lon) using unique-cache mapping.\n",
+    "    Invalid geohash -> NaN.\n",
+    "    \"\"\"\n",
+    "    uniq = series.unique()\n",
+    "    mapping = {}\n",
+    "    for gh in uniq:\n",
+    "        try:\n",
+    "            lat, lon = pgh.decode(gh)\n",
+    "            mapping[gh] = (lat, lon)\n",
+    "        except Exception:\n",
+    "            mapping[gh] = (np.nan, np.nan)\n",
     "\n",
-    "df[\"orig_lon\"] = lon_o\n",
-    "df[\"orig_lat\"] = lat_o\n",
-    "df[\"dest_lon\"] = lon_d\n",
-    "df[\"dest_lat\"] = lat_d\n",
+    "    latlon = series.map(mapping)\n",
+    "    out = pd.DataFrame(latlon.tolist(), index=series.index, columns=[\"lat\", \"lon\"])\n",
+    "    return out\n",
     "\n",
-    "gdf = gpd.GeoDataFrame(\n",
-    "    df,\n",
-    "    geometry=gpd.points_from_xy(df.orig_lon, df.orig_lat),\n",
-    "    crs=\"EPSG:4326\"\n",
-    ")\n",
+    "o_latlon = _decode_unique_geohash(df[\"geohash7_orig\"])\n",
+    "d_latlon = _decode_unique_geohash(df[\"geohash7_dest\"])\n",
+    "\n",
+    "df[\"orig_lat\"] = o_latlon[\"lat\"]\n",
+    "df[\"orig_lon\"] = o_latlon[\"lon\"]\n",
+    "df[\"dest_lat\"] = d_latlon[\"lat\"]\n",
+    "df[\"dest_lon\"] = d_latlon[\"lon\"]\n",
+    "\n",
+    "# 丢掉 decode 失败的点\n",
+    "df = df[df[\"orig_lat\"].notna() & df[\"orig_lon\"].notna() & df[\"dest_lat\"].notna() & df[\"dest_lon\"].notna()]\n",
+    "\n",
     "\n",
     "# =========================\n",
     "# 3️⃣ OD FILTER (SPATIAL JOIN, FAST)\n",
     "# =========================\n",
     "\n",
-    "gdf = gpd.sjoin(\n",
-    "    gdf,\n",
-    "    tracts.loc[tracts[\"GEOID\"] == ORIG_TRACT][[\"geometry\"]],\n",
-    "    predicate=\"within\",\n",
-    "    how=\"inner\"\n",
-    ")\n",
-    "\n",
+    "# Origin points GeoDataFrame\n",
     "gdf = gpd.GeoDataFrame(\n",
-    "    gdf.drop(columns=\"geometry\"),\n",
-    "    geometry=gpd.points_from_xy(gdf.dest_lon, gdf.dest_lat),\n",
+    "    df,\n",
+    "    geometry=gpd.points_from_xy(df[\"orig_lon\"], df[\"orig_lat\"]),\n",
     "    crs=\"EPSG:4326\"\n",
     ")\n",
     "\n",
-    "gdf = gpd.sjoin(\n",
+    "# sjoin origin within ORIG tract\n",
+    "gdf = gpd.sjoin(gdf, orig_poly, predicate=\"within\", how=\"inner\")\n",
+    "# 清理 join 产生的列，避免第二次 sjoin 冲突\n",
+    "for col in [\"index_right\"]:\n",
+    "    if col in gdf.columns:\n",
+    "        gdf = gdf.drop(columns=[col])\n",
+    "\n",
+    "# Destination points GeoDataFrame（替换 geometry 为 dest 点）\n",
+    "gdf = gdf.drop(columns=[\"geometry\"])\n",
+    "gdf = gpd.GeoDataFrame(\n",
     "    gdf,\n",
-    "    tracts.loc[tracts[\"GEOID\"] == DEST_TRACT][[\"geometry\"]],\n",
-    "    predicate=\"within\",\n",
-    "    how=\"inner\"\n",
+    "    geometry=gpd.points_from_xy(gdf[\"dest_lon\"], gdf[\"dest_lat\"]),\n",
+    "    crs=\"EPSG:4326\"\n",
     ")\n",
     "\n",
+    "# sjoin destination within DEST tract\n",
+    "gdf = gpd.sjoin(gdf, dest_poly, predicate=\"within\", how=\"inner\")\n",
+    "for col in [\"index_right\"]:\n",
+    "    if col in gdf.columns:\n",
+    "        gdf = gdf.drop(columns=[col])\n",
+    "\n",
+    "print(\"After OD (tract-based) filter, rows:\", len(gdf))\n",
+    "print(\"Unique linked trips:\", gdf[\"linked_trip_id\"].nunique())\n",
+    "\n",
+    "# 如果 OD 没有任何记录，直接输出空 stats（不报错）\n",
+    "if gdf.empty:\n",
+    "    stats = {\n",
+    "        \"schema\": \"nova.complete_trip.od_stats.v1\",\n",
+    "        \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
+    "        \"od\": {\"origin\": ORIG_TRACT, \"destination\": DEST_TRACT},\n",
+    "        \"coverage\": {\"temporal\": \"year-2020\", \"spatial\": \"Salt Lake 6-county\"},\n",
+    "        \"counts\": {\"linked_trips\": 0},\n",
+    "        \"note\": \"No rows after tract-based OD filter\"\n",
+    "    }\n",
+    "    with open(OUTPUT_STATS_JSON, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(stats, f, indent=2, allow_nan=False)\n",
+    "    print(\"Stats JSON written to:\", OUTPUT_STATS_JSON)\n",
+    "    raise SystemExit\n",
+    "\n",
+    "\n",
     "# =========================\n",
-    "# 4️⃣ COMPLETE TRIP FILTER (≥2 legs)\n",
+    "# 4️⃣ COMPLETE TRIP FILTER (≥2 legs)  ——逻辑不变\n",
     "# =========================\n",
     "\n",
     "leg_counts = gdf.groupby(\"linked_trip_id\").size()\n",
     "valid_ids = leg_counts[leg_counts >= 2].index\n",
     "gdf = gdf[gdf[\"linked_trip_id\"].isin(valid_ids)]\n",
+    "\n",
+    "print(\"After complete-trip filter, linked trips:\", gdf[\"linked_trip_id\"].nunique())\n",
+    "\n",
+    "if gdf.empty:\n",
+    "    stats = {\n",
+    "        \"schema\": \"nova.complete_trip.od_stats.v1\",\n",
+    "        \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
+    "        \"od\": {\"origin\": ORIG_TRACT, \"destination\": DEST_TRACT},\n",
+    "        \"coverage\": {\"temporal\": \"year-2020\", \"spatial\": \"Salt Lake 6-county\"},\n",
+    "        \"counts\": {\"linked_trips\": 0},\n",
+    "        \"note\": \"No valid complete trips (linked_trip with >=2 legs) after filtering\"\n",
+    "    }\n",
+    "    with open(OUTPUT_STATS_JSON, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(stats, f, indent=2, allow_nan=False)\n",
+    "    print(\"Stats JSON written to:\", OUTPUT_STATS_JSON)\n",
+    "    raise SystemExit\n",
+    "\n",
     "\n",
     "# =========================\n",
     "# 5️⃣ LEG DURATION (VECTOR)\n",
@@ -172,6 +243,7 @@
     "gdf[\"duration_min\"] = (\n",
     "    gdf[\"local_datetime_end\"] - gdf[\"local_datetime_start\"]\n",
     ").dt.total_seconds() / 60\n",
+    "\n",
     "\n",
     "# =========================\n",
     "# 6️⃣ COMPLETE-TRIP AGGREGATION (FAST)\n",
@@ -187,17 +259,19 @@
     "    )\n",
     ")\n",
     "\n",
-    "trip_stats[\"transfers\"] -= 1\n",
+    "trip_stats[\"transfers\"] = trip_stats[\"transfers\"] - 1\n",
+    "\n",
     "\n",
     "# =========================\n",
-    "# 7️⃣ FINAL STATS\n",
+    "# 7️⃣ FINAL STATS (WITH EMPTY GUARD)\n",
     "# =========================\n",
     "\n",
-    "dur = trip_stats[\"total_duration\"].values\n",
-    "trf = trip_stats[\"transfers\"].values\n",
-    "modes = trip_stats[\"modes\"].values\n",
+    "dur = trip_stats[\"total_duration\"].to_numpy()\n",
+    "trf = trip_stats[\"transfers\"].to_numpy()\n",
+    "modes = trip_stats[\"modes\"].to_numpy()\n",
     "\n",
-    "def pct(a, q): return float(np.percentile(a, q))\n",
+    "def pct(a, q):\n",
+    "    return float(np.percentile(a, q))\n",
     "\n",
     "stats = {\n",
     "    \"schema\": \"nova.complete_trip.od_stats.v1\",\n",
