--- a/data/samples/stats.ipynb
+++ b/data/samples/stats.ipynb
@@ -15,10 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "879c3751",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After OD (tract-based) filter, rows: 86\n",
+      "Unique linked trips: 85\n",
+      "After complete-trip filter, linked trips: 1\n",
+      "Stats JSON written to: 49035980000_to_49035110106.stats.json\n"
+     ]
+    }
+   ],
    "source": [
     "# ============================================================\n",
     "# FAST + ROBUST VERSION\n",
@@ -49,7 +60,7 @@
     ")\n",
     "\n",
     "ORIG_TRACT = \"49035980000\"\n",
-    "DEST_TRACT = \"49035114000\"\n",
+    "DEST_TRACT = \"49035110106\"\n",
     "# 49035114000 (center)\n",
     "# 49035980000 (airport)\n",
     "# 49035110106 (ski)\n",
