--- a/data/samples/stats.ipynb
+++ b/data/samples/stats.ipynb
@@ -48,7 +48,7 @@
     "    f\"2-OD patterns by census track/six_counties_track.shp\"\n",
     ")\n",
     "\n",
-    "ORIG_TRACT = \"49035114000\"\n",
+    "ORIG_TRACT = \"49035980000\"\n",
     "DEST_TRACT = \"49035101402\"\n",
     "# 49035114000 (center)\n",
     "# 49035980000 (airport)\n",
@@ -253,6 +253,7 @@
     "# =========================\n",
     "\n",
     "dur = trip_stats[\"total_duration\"].to_numpy()\n",
+    "mean_dur = float(dur.mean())\n",
     "trf = trip_stats[\"transfers\"].to_numpy()\n",
     "modes = trip_stats[\"modes\"].to_numpy()\n",
     "\n",
@@ -262,7 +263,7 @@
     "# 7️⃣b TRAVEL TIME DISTRIBUTION (HISTOGRAM)\n",
     "# =========================\n",
     "\n",
-    "BIN_WIDTH = 10        # minutes\n",
+    "BIN_WIDTH = 5        # minutes\n",
     "MAX_TIME  = 180       # minutes (cap long tail)\n",
     "\n",
     "bins = np.arange(0, MAX_TIME + BIN_WIDTH, BIN_WIDTH)\n",
@@ -288,6 +289,7 @@
     "    \"counts\": {\"linked_trips\": int(len(dur))},\n",
     "    \"trip_duration_min\": {\n",
     "        \"min\": float(dur.min()),\n",
+    "        \"mean\": mean_dur,\n",
     "        \"p25\": pct(dur, 25),\n",
     "        \"median\": pct(dur, 50),\n",
     "        \"p75\": pct(dur, 75),\n",
@@ -313,6 +315,33 @@
     "\n",
     "print(\"Stats JSON written to:\", OUTPUT_STATS_JSON)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "63a3f26d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 283 2034  987  229   76   24   13   11    5    4    7    4    3    3\n",
+      "    1    2    1   12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hist_counts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a9df910",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
