--- a/data/samples/stats.ipynb
+++ b/data/samples/stats.ipynb
@@ -15,20 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "879c3751",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After OD (tract-based) filter, rows: 185\n",
-      "Unique linked trips: 185\n",
-      "Stats JSON written to: 49035101402_to_49035110106.stats.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================\n",
     "# FAST + ROBUST VERSION\n",
@@ -58,7 +48,7 @@
     "    f\"2-OD patterns by census track/six_counties_track.shp\"\n",
     ")\n",
     "\n",
-    "ORIG_TRACT = \"49035101402\"\n",
+    "ORIG_TRACT = \"49035114000\"\n",
     "DEST_TRACT = \"49035110106\"\n",
     "# 49035114000 (center)\n",
     "# 49035980000 (airport)\n",
@@ -209,29 +199,6 @@
     "    print(\"Stats JSON written to:\", OUTPUT_STATS_JSON)\n",
     "    raise SystemExit\n",
     "\n",
-    "\n",
-    "# =========================\n",
-    "# 4️⃣ COMPLETE TRIP FILTER (≥2 legs)  ——逻辑不变\n",
-    "# =========================\n",
-    "\n",
-    "leg_counts = gdf.groupby(\"linked_trip_id\").size()\n",
-    "\n",
-    "\n",
-    "if gdf.empty:\n",
-    "    stats = {\n",
-    "        \"schema\": \"nova.complete_trip.od_stats.v1\",\n",
-    "        \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
-    "        \"od\": {\"origin\": ORIG_TRACT, \"destination\": DEST_TRACT},\n",
-    "        \"coverage\": {\"temporal\": \"year-2020\", \"spatial\": \"Salt Lake 6-county\"},\n",
-    "        \"counts\": {\"linked_trips\": 0},\n",
-    "        \"note\": \"No valid complete trips (linked_trip with >=2 legs) after filtering\"\n",
-    "    }\n",
-    "    with open(OUTPUT_STATS_JSON, \"w\", encoding=\"utf-8\") as f:\n",
-    "        json.dump(stats, f, indent=2, allow_nan=False)\n",
-    "    print(\"Stats JSON written to:\", OUTPUT_STATS_JSON)\n",
-    "    raise SystemExit\n",
-    "\n",
-    "\n",
     "# =========================\n",
     "# 5️⃣ LEG DURATION (VECTOR)\n",
     "# =========================\n",
@@ -250,12 +217,10 @@
     "    .groupby(\"linked_trip_id\")\n",
     "    .agg(\n",
     "        total_duration=(\"duration_min\", \"sum\"),\n",
-    "        transfers=(\"duration_min\", \"size\"),\n",
+    "        segments=(\"duration_min\", \"size\"),\n",
     "        modes=(\"travel_mode\", lambda x: set(m.lower().strip() for m in x))\n",
     "    )\n",
     ")\n",
-    "\n",
-    "trip_stats[\"transfers\"] = trip_stats[\"transfers\"] - 1\n",
     "\n",
     "\n",
     "# =========================\n",
@@ -264,7 +229,7 @@
     "\n",
     "dur = trip_stats[\"total_duration\"].to_numpy()\n",
     "mean_dur = float(dur.mean())\n",
-    "trf = trip_stats[\"transfers\"].to_numpy()\n",
+    "segments = trip_stats[\"segments\"].to_numpy()\n",
     "modes = trip_stats[\"modes\"].to_numpy()\n",
     "\n",
     "def pct(a, q):\n",
@@ -305,10 +270,10 @@
     "        \"p75\": pct(dur, 75),\n",
     "        \"max\": float(dur.max())\n",
     "    },\n",
-    "    \"transfers\": {\n",
-    "        \"avg\": float(trf.mean()),\n",
-    "        \"p75\": int(pct(trf, 75)),\n",
-    "        \"max\": int(trf.max())\n",
+    "    \"segments\": {\n",
+    "        \"avg\": float(segments.mean()),\n",
+    "        \"p75\": int(pct(segments, 75)),\n",
+    "        \"max\": int(segments.max())\n",
     "    },\n",
     "    \"mode_involvement\": {\n",
     "        \"car\": float(sum(\"car\" in m for m in modes) / len(modes)),\n",
