--- a/data/samples/stats.ipynb
+++ b/data/samples/stats.ipynb
@@ -15,10 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "879c3751",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After OD (tract-based) filter, rows: 86\n",
+      "Unique linked trips: 85\n",
+      "Stats JSON written to: 49035980000_to_49035110106.stats.json\n"
+     ]
+    }
+   ],
    "source": [
     "# ============================================================\n",
     "# FAST + ROBUST VERSION\n",
