--- a/data/samples/stats.ipynb
+++ b/data/samples/stats.ipynb
@@ -15,10 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "879c3751",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After OD (trip-level) filter, rows: 356\n",
+      "Unique linked trips: 334\n",
+      "Stats JSON written to: 49035114000_to_49035980000.stats.json\n"
+     ]
+    }
+   ],
    "source": [
     "# ============================================================\n",
     "# FAST + ROBUST VERSION\n",
@@ -48,15 +58,16 @@
     "    f\"2-OD patterns by census track/six_counties_track.shp\"\n",
     ")\n",
     "\n",
-    "ORIG_TRACT = \"49035110106\"\n",
-    "DEST_TRACT = \"49035114000\"\n",
+    "ORIG_TRACT = \"49035114000\"\n",
+    "DEST_TRACT = \"49035980000\"\n",
     "# 49035114000 (center)\n",
     "# 49035980000 (airport)\n",
     "# 49035110106 (ski)\n",
     "# 49035101402 (U of U)\n",
     "MONTHS = [\n",
-    "    \"Jan\",\"Feb\",\"Mar\",\"Apr\",\"May\",\"Jun\",\n",
-    "    \"Jul\",\"Aug\",\"Sep\",\"Oct\",\"Nov\",\"Dec\"\n",
+    "    \"Jan\"\n",
+    "    # ,\"Feb\",\"Mar\",\"Apr\",\"May\",\"Jun\",\n",
+    "    # \"Jul\",\"Aug\",\"Sep\",\"Oct\",\"Nov\",\"Dec\"\n",
     "]\n",
     "\n",
     "OUTPUT_STATS_JSON = f\"{ORIG_TRACT}_to_{DEST_TRACT}.stats.json\"\n",
@@ -109,21 +120,16 @@
     "\n",
     "df = df[df[\"local_datetime_end\"] > df[\"local_datetime_start\"]]\n",
     "\n",
-    "# 清理 geohash 空值/非字符串（避免 pgh.decode 崩）\n",
     "df = df[df[\"geohash7_orig\"].notna() & df[\"geohash7_dest\"].notna()]\n",
     "df[\"geohash7_orig\"] = df[\"geohash7_orig\"].astype(str)\n",
     "df[\"geohash7_dest\"] = df[\"geohash7_dest\"].astype(str)\n",
     "\n",
     "\n",
     "# =========================\n",
-    "# 2️⃣ FAST GEOHASH DECODE (UNIQUE CACHE)\n",
+    "# 2️⃣ FAST GEOHASH DECODE (OPTIMIZED: ONLY FIRST/last needed)\n",
     "# =========================\n",
     "\n",
-    "def _decode_unique_geohash(series: pd.Series) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Decode geohash series into (lat, lon) using unique-cache mapping.\n",
-    "    Invalid geohash -> NaN.\n",
-    "    \"\"\"\n",
+    "def _decode_unique_geohash(series):\n",
     "    uniq = series.unique()\n",
     "    mapping = {}\n",
     "    for gh in uniq:\n",
@@ -132,59 +138,68 @@
     "            mapping[gh] = (lat, lon)\n",
     "        except Exception:\n",
     "            mapping[gh] = (np.nan, np.nan)\n",
+    "    return series.map(mapping).apply(pd.Series).rename(columns={0: \"lat\", 1: \"lon\"})\n",
     "\n",
-    "    latlon = series.map(mapping)\n",
-    "    out = pd.DataFrame(latlon.tolist(), index=series.index, columns=[\"lat\", \"lon\"])\n",
-    "    return out\n",
     "\n",
-    "o_latlon = _decode_unique_geohash(df[\"geohash7_orig\"])\n",
-    "d_latlon = _decode_unique_geohash(df[\"geohash7_dest\"])\n",
+    "# -------------------------\n",
+    "# OPT 1: avoid full-table geohash decode & avoid full sort\n",
+    "# We first compute first/last row indices per linked_trip_id\n",
+    "# using vectorized idxmin/idxmax on timestamps\n",
+    "# -------------------------\n",
     "\n",
-    "df[\"orig_lat\"] = o_latlon[\"lat\"]\n",
-    "df[\"orig_lon\"] = o_latlon[\"lon\"]\n",
-    "df[\"dest_lat\"] = d_latlon[\"lat\"]\n",
-    "df[\"dest_lon\"] = d_latlon[\"lon\"]\n",
+    "# drop rows with invalid times early (helps groupby idx ops)\n",
+    "df = df[df[\"local_datetime_start\"].notna() & df[\"local_datetime_end\"].notna()]\n",
     "\n",
-    "# 丢掉 decode 失败的点\n",
-    "df = df[df[\"orig_lat\"].notna() & df[\"orig_lon\"].notna() & df[\"dest_lat\"].notna() & df[\"dest_lon\"].notna()]\n",
+    "idx_first = df.groupby(\"linked_trip_id\")[\"local_datetime_start\"].idxmin()\n",
+    "idx_last  = df.groupby(\"linked_trip_id\")[\"local_datetime_end\"].idxmax()\n",
+    "\n",
+    "first_trips = df.loc[idx_first, [\"linked_trip_id\", \"geohash7_orig\"]].copy()\n",
+    "last_trips  = df.loc[idx_last,  [\"linked_trip_id\", \"geohash7_dest\"]].copy()\n",
+    "\n",
+    "# decode only needed geohashes (huge speedup)\n",
+    "o_latlon = _decode_unique_geohash(first_trips[\"geohash7_orig\"])\n",
+    "d_latlon = _decode_unique_geohash(last_trips[\"geohash7_dest\"])\n",
+    "\n",
+    "first_trips[\"orig_lat\"] = o_latlon[\"lat\"]\n",
+    "first_trips[\"orig_lon\"] = o_latlon[\"lon\"]\n",
+    "last_trips[\"dest_lat\"]  = d_latlon[\"lat\"]\n",
+    "last_trips[\"dest_lon\"]  = d_latlon[\"lon\"]\n",
+    "\n",
+    "# drop decode failures before sjoin\n",
+    "first_trips = first_trips[first_trips[\"orig_lat\"].notna() & first_trips[\"orig_lon\"].notna()]\n",
+    "last_trips  = last_trips[last_trips[\"dest_lat\"].notna() & last_trips[\"dest_lon\"].notna()]\n",
     "\n",
     "\n",
     "# =========================\n",
-    "# 3️⃣ OD FILTER (SPATIAL JOIN, FAST)\n",
+    "# 3️⃣ TRIP-LEVEL OD FILTER (CORRECT, OPTIMIZED)\n",
     "# =========================\n",
     "\n",
-    "# Origin points GeoDataFrame\n",
-    "gdf = gpd.GeoDataFrame(\n",
-    "    df,\n",
-    "    geometry=gpd.points_from_xy(df[\"orig_lon\"], df[\"orig_lat\"]),\n",
+    "# origin check (first trip only)\n",
+    "gdf_o = gpd.GeoDataFrame(\n",
+    "    first_trips,\n",
+    "    geometry=gpd.points_from_xy(first_trips[\"orig_lon\"], first_trips[\"orig_lat\"]),\n",
     "    crs=\"EPSG:4326\"\n",
     ")\n",
+    "gdf_o = gpd.sjoin(gdf_o, orig_poly, predicate=\"within\", how=\"inner\")\n",
+    "valid_o_ids = set(gdf_o[\"linked_trip_id\"])\n",
     "\n",
-    "# sjoin origin within ORIG tract\n",
-    "gdf = gpd.sjoin(gdf, orig_poly, predicate=\"within\", how=\"inner\")\n",
-    "# 清理 join 产生的列，避免第二次 sjoin 冲突\n",
-    "for col in [\"index_right\"]:\n",
-    "    if col in gdf.columns:\n",
-    "        gdf = gdf.drop(columns=[col])\n",
-    "\n",
-    "# Destination points GeoDataFrame（替换 geometry 为 dest 点）\n",
-    "gdf = gdf.drop(columns=[\"geometry\"])\n",
-    "gdf = gpd.GeoDataFrame(\n",
-    "    gdf,\n",
-    "    geometry=gpd.points_from_xy(gdf[\"dest_lon\"], gdf[\"dest_lat\"]),\n",
+    "# destination check (last trip only)\n",
+    "gdf_d = gpd.GeoDataFrame(\n",
+    "    last_trips,\n",
+    "    geometry=gpd.points_from_xy(last_trips[\"dest_lon\"], last_trips[\"dest_lat\"]),\n",
     "    crs=\"EPSG:4326\"\n",
     ")\n",
+    "gdf_d = gpd.sjoin(gdf_d, dest_poly, predicate=\"within\", how=\"inner\")\n",
+    "valid_d_ids = set(gdf_d[\"linked_trip_id\"])\n",
     "\n",
-    "# sjoin destination within DEST tract\n",
-    "gdf = gpd.sjoin(gdf, dest_poly, predicate=\"within\", how=\"inner\")\n",
-    "for col in [\"index_right\"]:\n",
-    "    if col in gdf.columns:\n",
-    "        gdf = gdf.drop(columns=[col])\n",
+    "valid_linked_ids = valid_o_ids & valid_d_ids\n",
     "\n",
-    "print(\"After OD (tract-based) filter, rows:\", len(gdf))\n",
+    "# filter full df to keep all segments (same logic), then compute coords only for filtered data\n",
+    "gdf = df[df[\"linked_trip_id\"].isin(valid_linked_ids)].copy()\n",
+    "\n",
+    "print(\"After OD (trip-level) filter, rows:\", len(gdf))\n",
     "print(\"Unique linked trips:\", gdf[\"linked_trip_id\"].nunique())\n",
     "\n",
-    "# 如果 OD 没有任何记录，直接输出空 stats（不报错）\n",
     "if gdf.empty:\n",
     "    stats = {\n",
     "        \"schema\": \"nova.complete_trip.od_stats.v1\",\n",
@@ -192,15 +207,34 @@
     "        \"od\": {\"origin\": ORIG_TRACT, \"destination\": DEST_TRACT},\n",
     "        \"coverage\": {\"temporal\": \"year-2020\", \"spatial\": \"Salt Lake 6-county\"},\n",
     "        \"counts\": {\"linked_trips\": 0},\n",
-    "        \"note\": \"No rows after tract-based OD filter\"\n",
+    "        \"note\": \"No linked trips after trip-level OD filter\"\n",
     "    }\n",
     "    with open(OUTPUT_STATS_JSON, \"w\", encoding=\"utf-8\") as f:\n",
     "        json.dump(stats, f, indent=2, allow_nan=False)\n",
-    "    print(\"Stats JSON written to:\", OUTPUT_STATS_JSON)\n",
     "    raise SystemExit\n",
     "\n",
+    "\n",
     "# =========================\n",
-    "# 5️⃣ LEG DURATION (VECTOR)\n",
+    "# 4️⃣ (UNCHANGED LOGIC) OPTIONAL: decode all points for filtered data only\n",
+    "# (kept to preserve your existing columns if you later reuse them)\n",
+    "# =========================\n",
+    "\n",
+    "o_latlon_all = _decode_unique_geohash(gdf[\"geohash7_orig\"])\n",
+    "d_latlon_all = _decode_unique_geohash(gdf[\"geohash7_dest\"])\n",
+    "\n",
+    "gdf[\"orig_lat\"] = o_latlon_all[\"lat\"]\n",
+    "gdf[\"orig_lon\"] = o_latlon_all[\"lon\"]\n",
+    "gdf[\"dest_lat\"] = d_latlon_all[\"lat\"]\n",
+    "gdf[\"dest_lon\"] = d_latlon_all[\"lon\"]\n",
+    "\n",
+    "gdf = gdf[\n",
+    "    gdf[\"orig_lat\"].notna() & gdf[\"orig_lon\"].notna() &\n",
+    "    gdf[\"dest_lat\"].notna() & gdf[\"dest_lon\"].notna()\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# =========================\n",
+    "# 5️⃣ DURATION\n",
     "# =========================\n",
     "\n",
     "gdf[\"duration_min\"] = (\n",
@@ -209,7 +243,7 @@
     "\n",
     "\n",
     "# =========================\n",
-    "# 6️⃣ COMPLETE-TRIP AGGREGATION (FAST)\n",
+    "# 6️⃣ AGGREGATION\n",
     "# =========================\n",
     "\n",
     "trip_stats = (\n",
@@ -224,28 +258,21 @@
     "\n",
     "\n",
     "# =========================\n",
-    "# 7️⃣ FINAL STATS (WITH EMPTY GUARD)\n",
+    "# 7️⃣ FINAL STATS\n",
     "# =========================\n",
     "\n",
     "dur = trip_stats[\"total_duration\"].to_numpy()\n",
-    "mean_dur = float(dur.mean())\n",
     "segments = trip_stats[\"segments\"].to_numpy()\n",
     "modes = trip_stats[\"modes\"].to_numpy()\n",
     "\n",
     "def pct(a, q):\n",
     "    return float(np.percentile(a, q))\n",
-    "# =========================\n",
-    "# 7️⃣b TRAVEL TIME DISTRIBUTION (HISTOGRAM)\n",
-    "# =========================\n",
     "\n",
-    "BIN_WIDTH = 5        # minutes\n",
-    "MAX_TIME  = 180       # minutes (cap long tail)\n",
+    "BIN_WIDTH = 5\n",
+    "MAX_TIME = 180\n",
     "\n",
     "bins = np.arange(0, MAX_TIME + BIN_WIDTH, BIN_WIDTH)\n",
-    "\n",
-    "# cap extreme values\n",
     "dur_capped = np.clip(dur, 0, MAX_TIME)\n",
-    "\n",
     "hist_counts, bin_edges = np.histogram(dur_capped, bins=bins)\n",
     "\n",
     "travel_time_hist = {\n",
@@ -255,7 +282,6 @@
     "    \"counts\": hist_counts.tolist()\n",
     "}\n",
     "\n",
-    "\n",
     "stats = {\n",
     "    \"schema\": \"nova.complete_trip.od_stats.v1\",\n",
     "    \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
@@ -264,7 +290,7 @@
     "    \"counts\": {\"linked_trips\": int(len(dur))},\n",
     "    \"trip_duration_min\": {\n",
     "        \"min\": float(dur.min()),\n",
-    "        \"mean\": mean_dur,\n",
+    "        \"mean\": float(dur.mean()),\n",
     "        \"p25\": pct(dur, 25),\n",
     "        \"median\": pct(dur, 50),\n",
     "        \"p75\": pct(dur, 75),\n",
@@ -282,7 +308,6 @@
     "        \"walk\": float(sum(\"walk\" in m for m in modes) / len(modes))\n",
     "    },\n",
     "    \"travel_time_distribution\": travel_time_hist\n",
-    "\n",
     "}\n",
     "\n",
     "with open(OUTPUT_STATS_JSON, \"w\", encoding=\"utf-8\") as f:\n",
