--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "\n",
     "# airport -> central city (example)\n",
     "ORIG_TRACT = \"49035980000\"#49057201900 (weber) #49035980000 (airport)\n",
-    "DEST_TRACT = \"49035101402\" #49035110106 (ski)\n",
+    "DEST_TRACT = \"49035980000\" #49035110106 (ski)\n",
     "# 49035114000 (center)\n",
     "# 49035101402 (U of U)\n",
     "MONTHS = ['Jan',\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -85,31 +85,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Processing month Jan ===\n",
-      "\n",
-      "=== Processing month Feb ===\n",
-      "\n",
-      "=== Processing month Mar ===\n",
-      "\n",
-      "=== Processing month Apr ===\n",
-      "\n",
-      "=== Processing month May ===\n",
-      "\n",
-      "=== Processing month Jun ===\n",
-      "\n",
-      "=== Processing month Jul ===\n",
-      "\n",
-      "=== Processing month Aug ===\n",
-      "\n",
-      "=== Processing month Sep ===\n",
-      "\n",
-      "=== Processing month Oct ===\n",
-      "\n",
-      "=== Processing month Nov ===\n",
-      "\n",
-      "=== Processing month Dec ===\n",
-      "Before OD filter, linked trips: 218277\n",
-      "Fixed OD distance (mile): 8.72\n"
+      "=== Processing month Jan ===\n"
      ]
     }
    ],
@@ -227,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4ed905c2",
    "metadata": {},
    "outputs": [
@@ -235,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After OD filter, linked trips: 194096\n"
+      "After OD filter, linked trips: 0\n"
      ]
     }
    ],
@@ -276,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c99013d5",
    "metadata": {},
    "outputs": [],
@@ -319,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "93c12ee5",
    "metadata": {},
    "outputs": [],
@@ -347,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "94377eb6",
    "metadata": {},
    "outputs": [],
@@ -414,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "59523236",
    "metadata": {},
    "outputs": [],
@@ -424,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e2e6593d",
    "metadata": {},
    "outputs": [],
@@ -474,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
