--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -48,8 +48,8 @@
     "TRACT_SHP = f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
     "\n",
     "# airport -> central city (example)\n",
-    "ORIG_TRACT = \"49035980000\"#49057201900 (weber) #49035980000 (airport)\n",
-    "DEST_TRACT = \"49035980000\" #49035110106 (ski)\n",
+    "ORIG_TRACT = \"49035110106\"#49057201900 (weber) #49035980000 (airport)\n",
+    "DEST_TRACT = \"49035110106\" #49035110106 (ski)\n",
     "# 49035114000 (center)\n",
     "# 49035101402 (U of U)\n",
     "MONTHS = ['Jan',\n",
@@ -85,7 +85,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Processing month Jan ===\n"
+      "=== Processing month Jan ===\n",
+      "\n",
+      "=== Processing month Feb ===\n",
+      "\n",
+      "=== Processing month Mar ===\n",
+      "\n",
+      "=== Processing month Apr ===\n",
+      "\n",
+      "=== Processing month May ===\n",
+      "\n",
+      "=== Processing month Jun ===\n",
+      "\n",
+      "=== Processing month Jul ===\n"
      ]
     }
    ],
