--- a/data/samples/sample_selection_within_same_tract.ipynb
+++ b/data/samples/sample_selection_within_same_tract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -48,8 +48,8 @@
     "TRACT_SHP = f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
     "\n",
     "# airport -> central city (example)\n",
-    "ORIG_TRACT = \"49035101402\"#49057201900 (weber) #49035980000 (airport)\n",
-    "DEST_TRACT = \"49035101402\" #49035110106 (ski)\n",
+    "ORIG_TRACT = \"49035980000\"#49057201900 (weber) #49035980000 (airport)\n",
+    "DEST_TRACT = \"49035980000\" #49035110106 (ski)\n",
     "# 49035114000 (center)\n",
     "# 49035101402 (U of U)\n",
     "MONTHS = ['Jan',\n",
@@ -58,7 +58,6 @@
     "OUTPUT_CSV = f\"{ORIG_TRACT}_to_{DEST_TRACT}.csv\"\n",
     "OUTPUT_JSON = f\"{ORIG_TRACT}_to_{DEST_TRACT}.json\"\n",
     "\n",
-    "KEEP_FACTOR = 2.5   # OD < 2.5 * max(route_dist) -> DROP\n",
     "\n",
     "MAX_SAMPLES = 3\n",
     "\n",
@@ -85,13 +84,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Processing month Jan ===\n",
-      "\n",
-      "=== Processing month Feb ===\n",
-      "\n",
-      "=== Processing month Mar ===\n",
-      "\n",
-      "=== Processing month Apr ===\n"
+      "=== Processing month Jan ===\n"
      ]
     }
    ],
@@ -159,8 +152,7 @@
     "    )\n",
     "\n",
     "    valid_linked_ids = mode_sets[\n",
-    "        (mode_sets.apply(len) >= 2) &\n",
-    "        (mode_sets != {\"car\"})\n",
+    "        (mode_sets == {\"walk/bike\"})\n",
     "    ].index\n",
     "\n",
     "    df_month = df_month[df_month[\"linked_trip_id\"].isin(valid_linked_ids)]\n",
@@ -217,7 +209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After OD filter, linked trips: 0\n"
+      "After OD filter, linked trips: 5224913\n"
      ]
     }
    ],
@@ -237,13 +229,6 @@
     "    .reset_index()\n",
     ")\n",
     "\n",
-    "# 删除：只要有一条 trip > 2.5 * OD_DIST_MILE\n",
-    "valid_linked_ids = network_max.loc[\n",
-    "    network_max[\"max_network_dist\"] <= KEEP_FACTOR * OD_DIST_MILE,\n",
-    "    \"linked_trip_id\"\n",
-    "]\n",
-    "\n",
-    "df = df[df[\"linked_trip_id\"].isin(valid_linked_ids)]\n",
     "\n",
     "print(\"After OD filter, linked trips:\", df[\"linked_trip_id\"].nunique())\n"
    ]
