--- a/data/samples/stats.ipynb
+++ b/data/samples/stats.ipynb
@@ -15,10 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "879c3751",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After OD (trip-level) filter, rows: 6000\n",
+      "Unique linked trips: 5817\n",
+      "Stats JSON written to: 49035101402_to_49035101402.stats.json\n"
+     ]
+    }
+   ],
    "source": [
     "# ============================================================\n",
     "# FAST + ROBUST VERSION\n",
@@ -48,8 +58,8 @@
     "    f\"2-OD patterns by census track/six_counties_track.shp\"\n",
     ")\n",
     "\n",
-    "ORIG_TRACT = \"49035114000\"\n",
-    "DEST_TRACT = \"49035114000\"\n",
+    "ORIG_TRACT = \"49035101402\"\n",
+    "DEST_TRACT = \"49035101402\"\n",
     "# 49035114000 (center)\n",
     "# 49035980000 (airport)\n",
     "# 49035110106 (ski)\n",
