--- a/data/samples/sample_selection_within_same_tract.ipynb
+++ b/data/samples/sample_selection_within_same_tract.ipynb
@@ -84,7 +84,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Processing month Jan ===\n"
+      "=== Processing month Jan ===\n",
+      "\n",
+      "=== Processing month Feb ===\n",
+      "\n",
+      "=== Processing month Mar ===\n",
+      "\n",
+      "=== Processing month Apr ===\n",
+      "\n",
+      "=== Processing month May ===\n",
+      "\n",
+      "=== Processing month Jun ===\n"
      ]
     }
    ],
